--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,24 +21,36 @@
         tools:layout_editor_absoluteX="4dp"
         tools:layout_editor_absoluteY="39dp" />
 
-    <EditText
-        android:id="@+id/edit_Text"
-        android:layout_width="328dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
-        android:background="@android:color/white"
-        android:orientation="vertical" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        tools:context=".MainActivity">
 
-    <Spinner
-        android:id="@+id/spineer"
-        android:layout_width="157dp"
-        android:layout_height="65dp"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
-        android:background="@android:color/white"
-        android:orientation="horizontal"
-        android:prompt="@string/app_name"></Spinner>
+        <EditText
+            android:id="@+id/edit_Text"
+            android:layout_width="233dp"
+            android:layout_height="53dp"
+            android:layout_gravity="left
+"
+            android:layout_margin="8dp"
+
+            android:layout_marginTop="20dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal" />
+
+        <Spinner
+            android:id="@+id/spineer"
+            android:layout_width="111dp"
+            android:layout_height="53dp"
+            android:layout_gravity="right
+"
+            android:layout_margin="8dp"
+            android:layout_marginTop="20dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:prompt="@string/app_name"></Spinner>
+    </LinearLayout>
 
     <Button
         android:orientation="vertical"
